--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "doctrine/cache": "^1.10",
         "symfony/http-foundation": "^4.4",
         "symfony/psr-http-message-bridge": "^2.0",
-        "psr/simple-cache": "^1.0"
+        "psr/simple-cache": "^1.0",
+        "illuminate/container": "^5.8"
     },
     "autoload": {
         "psr-4": {
@@ -26,5 +27,15 @@
     "require-dev": {
         "phpunit/phpunit": "^7.5",
         "overtrue/phplint": "^1.2"
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "OtkurBiz\\ByteDance\\ServiceProvider"
+            ],
+            "aliases": {
+                "ByteDance": "Overtrue\\ByteDance\\Facade"
+            }
+        }
     }
 }
