--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "symfony/http-foundation": "^4.4",
         "symfony/psr-http-message-bridge": "^2.0",
         "psr/simple-cache": "^1.0",
-        "illuminate/container": "^5.8"
+        "illuminate/container": "5.2"
     },
     "autoload": {
         "psr-4": {
