--- a/composer.json
+++ b/composer.json
@@ -13,11 +13,11 @@
         "monolog/monolog": "^1.25",
         "pimple/pimple": "^3.2",
         "ext-json": "^1.5",
-        "doctrine/cache": "^1.10",
         "symfony/http-foundation": "^4.4",
         "symfony/psr-http-message-bridge": "^2.0",
         "psr/simple-cache": "^1.0",
-        "illuminate/container": "5.2.32"
+        "illuminate/container": "5.2.32",
+        "doctrine/cache": "1.4"
     },
     "autoload": {
         "psr-4": {
