--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,7 @@
         "symfony/http-foundation": "^4.4",
         "symfony/psr-http-message-bridge": "^2.0",
         "psr/simple-cache": "^1.0",
-        "illuminate/container": "5.2.32",
-        "doctrine/cache": "1.4.0"
+        "illuminate/container": "5.2.32"
     },
     "autoload": {
         "psr-4": {
