--- a/composer.json
+++ b/composer.json
@@ -9,14 +9,15 @@
         }
     ],
     "require": {
-        "guzzlehttp/guzzle": "^6.5",
-        "monolog/monolog": "^1.25",
         "pimple/pimple": "^3.2",
         "ext-json": "^1.5",
         "symfony/http-foundation": "^4.4",
         "symfony/psr-http-message-bridge": "^2.0",
         "psr/simple-cache": "^1.0",
-        "illuminate/container": "5.2.32"
+        "illuminate/container": "5.2.32",
+        "guzzlehttp/guzzle": "~6.2.1",
+        "monolog/monolog": "^1.17",
+        "doctrine/cache": "1.4"
     },
     "autoload": {
         "psr-4": {
