--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "illuminate/container": "5.2.32",
         "guzzlehttp/guzzle": "~6.2.1",
         "monolog/monolog": "^1.17",
-        "doctrine/cache": "1.4"
+        "doctrine/cache": "v1.4.0"
     },
     "autoload": {
         "psr-4": {
