--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,6 @@
         }
     ],
     "require": {
-        "pimple/pimple": "^3.2",
         "ext-json": "^1.5",
         "symfony/http-foundation": "^4.4",
         "symfony/psr-http-message-bridge": "^2.0",
@@ -17,7 +16,8 @@
         "illuminate/container": "5.2.32",
         "guzzlehttp/guzzle": "~6.2.1",
         "monolog/monolog": "^1.17",
-        "doctrine/cache": "~1.4"
+        "doctrine/cache": "~1.4",
+        "pimple/pimple": "3.0.2"
     },
     "autoload": {
         "psr-4": {
