--- a/composer.json
+++ b/composer.json
@@ -10,14 +10,14 @@
     ],
     "require": {
         "ext-json": "^1.5",
-        "symfony/http-foundation": "^4.4",
-        "symfony/psr-http-message-bridge": "^2.0",
         "psr/simple-cache": "^1.0",
         "illuminate/container": "5.2.32",
         "guzzlehttp/guzzle": "~6.2.1",
         "monolog/monolog": "^1.17",
         "doctrine/cache": "~1.4",
-        "pimple/pimple": "3.0.2"
+        "pimple/pimple": "3.0.2",
+        "symfony/psr-http-message-bridge": "1.0",
+        "symfony/http-foundation": "3.0.9"
     },
     "autoload": {
         "psr-4": {
